[package]
name = "librtbit-bencode"
version = "0.1.4"
edition = "2024"
description = "Bencode serialization and deserialization using Serde"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/librtbit-bencode"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
buffers = { version = "0.1.2", package = "librtbit-buffers", registry = "forgejo" }
clone_to_owned = { version = "0.1.1", package = "librtbit-clone-to-owned", registry = "forgejo" }
bytes = "1"
atoi = "2"
thiserror = "2"
arrayvec = "0.7"
anyhow = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
