[package]
name = "librtbit-bencode"
version = "0.1.5"
edition = "2024"
description = "Bencode serialization and deserialization using Serde"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/librtbit-bencode"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
buffers = { git = "https://github.com/TheDancingDeveloper-org/librtbit-buffers.git", branch = "migration/github-native-source", package = "librtbit-buffers" }
clone_to_owned = { git = "https://github.com/TheDancingDeveloper-org/librtbit-clone-to-owned.git", package = "librtbit-clone-to-owned" }
bytes = "1"
atoi = "3"
thiserror = "2"
arrayvec = "0.7"
anyhow = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
